--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lazydf"
-version = "0.220724.3"
-description = "Safe and deterministic (when possible)-serializer to binary, including Pandas data"
+version = "0.220724.4"
+description = "Hopefully safe and deterministic serializer to binary format, including Pandas data"
 authors = ["davips <dpsabc@gmail.com>"]
 license = "GPL"
 readme = 'README.md'
@@ -10,7 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 lz4 = "^4.0.1"
 bson = "^0.5.10"
 orjson = "^3.7.8"
@@ -23,7 +23,6 @@ autoreadme = "^0.2102.20"
 pytest = "^6.2.5"
 pytest-cov = "^2.12.1"
 ipython = "^7.27.0"
-pypi-server = "^0.4.8"
 black = "^21.9b0"
 flake8 = "^4.0.1"
 click = "8.0.4"
@@ -31,4 +30,3 @@ click = "8.0.4"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
