Update dev deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ pymongo = "^4.2.0"  # Needed because it includes bson
 [tool.poetry.dev-dependencies]
 pdoc3 = "^0.10.0"
 autoreadme = "^0.2102.20"
-pytest = "^6.2.5"
-pytest-cov = "^2.12.1"
-ipython = "^7.27.0"
-black = "^21.9b0"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
+ipython = "^8.4.0"
+black = "^22.6.0"
 flake8 = "^4.0.1"
 click = "8.0.4"
 lz4 = "^4.0.2"
