--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov pandas lz4 pymongo
+          pip install flake8 pytest pytest-cov pandas lz4 pymongo dill pyarrow
           pip install .
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
