--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "safeserializer"
 version = "0.230202.1"
-description = "Hopefully safe and deterministic serializer to binary format, including Pandas data"
+description = "Safe and deterministic (when required) serializer from many types to binary"
 authors = ["davips <dpsabc@gmail.com>"]
 license = "GPL"
 readme = 'README.md'
